<resources>
    <string name="app_name">Covid App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutapp">We provide all possible COVID-19 related data from GOVERNMENT and other trust worthy sources.
        COVID-19 Vaccine Certificate downloads are directly from Government data.
        All Indians can download their vaccine certificate anytime anywhere from our app. Get hospital details, Covid helpline, Vaccination information, Latest Covid-19 news, etc. More coming from us. </string>
    <string name="shareus">Share and Support Us</string>
    <string name="verification">Verification</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="todo">TODO</string>
    <string name="registered_mobile">Please enter Registered mobile number given at the time of Vaccination</string>
    <string name="go_back">Go Back</string>
    <string name="get_otp">get otp</string>
    <string name="enter_beneficiary_reference_id">Enter Beneficiary Reference Id</string>
    <string name="app_id">ca-app-pub-8669188519734324~8350578133</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="certificate_note">Note: If you\'re facing trouble while logging in or downloading the certificate please try after sometime.</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>