<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Milk_White"
    android:orientation="vertical"
    tools:context=".fragments.DownloadVaccineCertificate">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/verification"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="5dp"
                android:text="@string/please_enter_registered_mobile_number_given_at_the_time_of_vaccination"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonelayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/Greenish_Blue"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otplayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phonelayout"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/enter_otp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/Greenish_Blue"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reflayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otplayout"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/enter_beneficiary_reference_id"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/Greenish_Blue"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/refid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reflayout"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/Greenish_Blue"
                android:text="@string/get_otp"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goback"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/Platinum"
                android:text="@string/go_back"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>