<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Milk_White"
    android:elevation="20dp"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardBackgroundColor="#4FFBDF"
        app:cardCornerRadius="80dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/aboutapp"
        android:textAlignment="center"
        android:textColor="@color/Black" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/share"
        app:contentPadding="10dp"
        app:rippleColor="@color/Platinum"
        app:cardElevation="0dp">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:text="@string/shareus"
            android:textAlignment="center"
            android:textColor="@color/Aztec_Purple"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>


    <ImageButton
        android:id="@+id/telegram"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/tele" />


    <ImageView
        android:id="@+id/bogarsoft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/frombogarsoftlogo" />
</LinearLayout>